common-applications/control/moocstudio/openeuler/moocstudio-webiste-frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: moocstudio-openeuler-website-frontend
  name: moocstudio-openeuler-website-frontend
