common-applications/control/moocstudio/openeuler/moocstudio-webiste-frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: moocstudio-website-frontend-service
  namespace: moocstudio-website-frontend
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: moocstudio-website-frontend
  type: ClusterIP
