common-applications/control/moocstudio/openeuler/moocstudio-webiste-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: moocstudio-website-frontend-ingress
  namespace: moocstudio-website-frontend
spec:
  tls:
    - hosts:
        - moocstudio.openeuler.sh
      secretName: moocstudio-website-frontend-tls-secret
  rules:
    - host: moocstudio.openeuler.sh
      http:
        paths:
          - backend:
              serviceName: moocstudio-website-frontend-service
              servicePort: 80
            path: /
